# ChangeLog for www-apps/phprojekt
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/phprojekt/ChangeLog,v 1.28 2007/06/03 19:39:49 rl03 Exp $

  03 Jun 2007; Renat Lumpau <rl03@gentoo.org>
  -files/phprojekt-4.2.3-fix-chat-vuln.diff, -phprojekt-4.2.3.ebuild:
  Clean out old version

  02 Jun 2007; nixnut <nixnut@gentoo.org> phprojekt-5.2.2.ebuild:
  Stable on ppc wrt bug 170905

  31 May 2007; Christian Faulhammer <opfer@gentoo.org>
  phprojekt-5.2.2.ebuild:
  stable x86, security bug 170905

*phprojekt-5.2.2 (28 May 2007)

  28 May 2007; Renat Lumpau <rl03@gentoo.org> -phprojekt-5.2.ebuild,
  +phprojekt-5.2.2.ebuild:
  Version bump, bug #170905

*phprojekt-5.2 (03 Jan 2007)

  03 Jan 2007; Renat Lumpau <rl03@gentoo.org> phprojekt-4.2.3.ebuild,
  -phprojekt-5.1.2.ebuild, +phprojekt-5.2.ebuild:
  Version bump

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> phprojekt-4.2.3.ebuild,
  phprojekt-5.1.2.ebuild:
  dev-db/mysql => virtual/mysql

*phprojekt-5.1.2 (04 Oct 2006)

  04 Oct 2006; Renat Lumpau <rl03@gentoo.org> -phprojekt-5.1.1.ebuild,
  +phprojekt-5.1.2.ebuild:
  Version bump, security bug #149672.

*phprojekt-5.1.1 (03 Sep 2006)

  03 Sep 2006; Renat Lumpau <rl03@gentoo.org> -phprojekt-5.0.1.ebuild,
  +phprojekt-5.1.1.ebuild:
  Version bump

  09 Jul 2006; Renat Lumpau <rl03@gentoo.org> phprojekt-4.2.3.ebuild,
  phprojekt-5.0.1.ebuild:
  einfo->elog

  31 Oct 2005; Renat Lumpau <rl03@gentoo.org> phprojekt-5.0.1.ebuild:
  Fixed SRC_URI

  25 Oct 2005; Renat Lumpau <rl03@gentoo.org> phprojekt-5.0.1.ebuild:
  Fixed bug #110415.

*phprojekt-5.0.1 (23 Oct 2005)

  23 Oct 2005; Renat Lumpau <rl03@gentoo.org> -phprojekt-5.0.ebuild,
  +phprojekt-5.0.1.ebuild:
  Version bump.

*phprojekt-5.0 (22 Aug 2005)

  22 Aug 2005; Renat Lumpau <rl03@gentoo.org> files/postinstall-en.txt,
  +phprojekt-5.0.ebuild:
  Housekeeping
