@@ -1,5 +1,8 @@
+AUX postinstall-6-en.txt 235 RMD160 800fdad8eb4300b1ca2d120a66b4682024f1874f SHA1 d477fa32c21624bad979bc96596a2663eb7181dc SHA256 c6edc429bf4b8ef5839629e78a623172da9ea14683b17fcc6bcd843ee1f84167
 AUX postinstall-en.txt 612 RMD160 389b23ce164e3ea767bb1fc0eb1be0cb5e4a45d2 SHA1 c7d363e177687a546cfc5e06f04eb9a974c9b7d0 SHA256 3002b2984a9e3e511a7f5c855fcdc5a876ce43d82dd398051b0f0d56e0bed60d
 DIST phprojekt-5.2.2.tar.gz 1843297 RMD160 9ab041f1282fed9bad83f9ac3a74543405b14af7 SHA1 da6cf9081b05088c7a949f3c8fb53ec71412fb78 SHA256 8b301682f1178fd50f7058e4052a4b790f7debb10e02619945c35bfa8557348d
+DIST phprojekt-6.1.2.tar.gz 34786513 RMD160 0dcd0e59b5c2ad342fe19558cf5234263cfa9bcb SHA1 7287900e3e87694a486fb51059417501e403fb31 SHA256 1192c00e09e3552e1f43d80239371de8239b24e6c5bc6a2d13d2f791e47f3048
 EBUILD phprojekt-5.2.2.ebuild 902 RMD160 990912ebebfbf1ee72e50f2e2067801835564a31 SHA1 a65964300afc31ac00b0207c3ac43c6bb54c6f01 SHA256 5107494a1209f7678e1b89c35d3a2899d0c4a218582cd6abea71403d2cee1dc0
-MISC ChangeLog 5218 RMD160 593a31630f6ad6184000ccebcfb1def9080a21d6 SHA1 defbc8ceaef9cf0307355a7c0aa3114f1eafa0f5 SHA256 39a35ef64be3c648850e122b5664066143f4fecbbd7b12db4e5a273c2a36a54a
+EBUILD phprojekt-6.1.2.ebuild 1135 RMD160 d6612437dcb7f48f0e457c4c09236fc457602b64 SHA1 b4393a5a05c5c8e1d3b0fc759912e98f3598ba4b SHA256 327c0765a0dca220004728cead2e2ee1be5fa7d8fca58f8727cf72ccf5720f17
+MISC ChangeLog 5475 RMD160 aed32c4a351091e2fc6bc1be9261156cd105a7e0 SHA1 c1fd685fe20c8d41830c8464821ab7e3497a281a SHA256 403c885bf99dccff4128229b3e7735bc88827e1ae8acc0d0f054c2de247eed2e
 MISC metadata.xml 280 RMD160 c449ad35e8af3f158d8f8305f8a02ff98a420970 SHA1 9be68166586fe2133dc7cc5347b8edddd34e4926 SHA256 fd37fa0f441b1b68ef8dc4bffbb0a51f0414aa7c370b48369453af5f4bff177a
